# assobot

./: .gitignore  LICENSE  README.md  doc.md  home.html  licence.txt  login.html  pyproject.toml
.github/: CONTRIBUTING.md
assobot/: __init__.py  app.py  config.py
assobot-plugin/reaction_role/: settings.json
assobot-plugin/welcome/: plugin.py  settings.json
assobot-plugin/welcome/core/: __init__.py
assobot-plugin/welcome/templates/: settings.html
assobot-sdk/: sdk.py
assobot-sdk/plugin/: __init__.py  scripts.py
assobot-sdk/plugin/plugin_template/: plugin.py  settings.json
assobot/core/auth/: __init__.py  auth_context.py  auth_manager.py  auth_route.py
assobot/core/error/: error.py
assobot/core/guild/: __init__.py  guild.py  guild_manager.py
assobot/core/plugin/: __init__.py  plugin.py  plugin_factory.py  plugin_manager.py  plugin_route.py
assobot/core/route/: __init__.py  route_auth.py  route_guild.py  route_plugin.py
assobot/core/settings/: __init__.py  settings_manager.py
assobot/core/utils/: __init__.py  file_utils.py  logger.py
assobot/plugins/: bot_commands.py  member_join_plugin.py
assobot/static/css/: home.css  root.css  welcome-message.css
assobot/templates/: guilds.html  home.html  index.html  login.html  pluginGallery.html  serveur.html
assobot/templates/default/: guilds.html  index.html  index2.html  (+1 more)
assobot_plugin/instagram/: plugin.py  requirements.txt  settings.json
assobot_plugin/reaction_role/: plugin.py  settings.json
assobot_plugin/welcome/: plugin.py
assobot_sdk/: sdk.py
assobot_sdk/plugin/: scripts.py
(+20 files in other folders)
